updated temp html

--- a/WebVisualizations/visualizations/temp1.html
+++ b/WebVisualizations/visualizations/temp1.html
@@ -37,26 +37,31 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
-    </nav>                     
+</nav>                     
    
-       <div class="container comparison_body">
-           <div class="row">
-              <div class="col-md-12">
-                    <h1 class ="title_style">
-                         Max Temperature
-                    </h1>
-                    <figure>
-                        <img class="visual_img"src="../Resources/assets/images/Fig1.png">
-                        <figcaption>
-                            <em>Figure for Temperature vs...</em>
-                        </figcaption>
-                    </figure>
-                    <p>
-                        As expected, the weather becomes......
-                    </p>
-               </div>
-           </div>
-        </div>
+<div class="container">
+    <article>
+        <h1 class ="title_style">Max Temperature</h1>
+        <hr>
+        <figure>
+            <img class="visual_img"src="../Resources/assets/images/Fig1.png">
+            <figcaption>
+               <em>Figure for Temperature vs...</em>
+            </figcaption>
+        </figure>
+        <p>As expected, the weather becomes......</p>
+    </article>
+    <visual-body>
+          <h1 class="title_style">Visualization</h1>
+          <hr>
+          <div class="row">
+            <div class="col-md-6 col-xs-3"><a href="./temp1.html"><img class="visual_img" src="../Resources/assets/images/Fig1.png"></a></div>
+            <div class="col-md-6 col-xs-3"><a href="./temp2.html"><img  class="visual_img" src="../Resources/assets/images/Fig2.png"></a></div>
+            <div class="col-md-6 col-xs-3"><a href="./temp3.html"><img  class="visual_img" src="../Resources/assets/images/Fig3.png"></a></div>
+            <div class="col-md-6 col-xs-3"><a href="./temp4.html"><img  class="visual_img" src="../Resources/assets/images/Fig4.png"></a></div>
+          </div>
+    </visual-body>
+</div>
         
  
 <footer>
